sample_manifest (57).yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: 'mbsgui-ab95776-java-test'
  namespace: 'mbs-test'
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/load-balance: "round_robin"
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    project: 'mbs-app-gui'
    branch: 'ab95776'
    commit: '18719ca'
    role: java
    environment: test
spec:
  rules:
    - host: mbsgui-test.kubeodc-test.corp.intranet
      http:
        paths:
          - path: /
            backend:
              serviceName: 'mbsgui-ab95776-java-test'
              servicePort: 8080
  tls:
    - hosts:
      - 'mbsgui-test.kubeodc-test.corp.intranet'
      secretName: managed-tls-secret
---
---
apiVersion: v1
kind: Service
metadata:
  name: 'mbsgui-ab95776-java-test'
  namespace: 'mbs-test'
  labels:
    project: 'mbs-app-gui'
    branch: 'ab95776'
    commit: '18719ca'
    role: java
    environment: test
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    project: 'mbs-app-gui'
    branch: 'ab95776'
    commit: '18719ca'
    role: java
    environment: test
  type: ClusterIP
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 'mbsgui-ab95776-java-test'
  labels:
    project: 'mbs-app-gui'
    branch: 'ab95776'
    commit: '18719ca'
    role: java
    environment: test
spec:
  selector:
    matchLabels:
      project: 'mbs-app-gui'
      branch: 'ab95776'
      role: java
      environment: test
  replicas: 1
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        project: 'mbs-app-gui'
        branch: 'ab95776'
        commit: '18719ca'
        role: java
        environment: test
    spec:
      containers:
        - name: java-ab95776
          image: 'nexusprod.corp.intranet:4567/mbs_dev/mbs-app-gui:ab95776'
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 2048Mi
              cpu: 250m
            requests:
              memory: 512Mi
              cpu: 100m
      imagePullSecrets:
        - name: mbs-app-gui-ab95776
---
---
